compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@namespaced_generic_ty_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = std::Buffer<T>::call(a, b);\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Call(
                Call {
                    callee: None,
                    name: Path {
                        root: [
                            Namespace {
                                name: Identifier {
                                    name: "std",
                                    location: Location(
                                        8..11,
                                    ),
                                },
                            },
                            Type {
                                name: Identifier {
                                    name: "Buffer",
                                    location: Location(
                                        13..19,
                                    ),
                                },
                                bound_types: [
                                    Named(
                                        NamedType {
                                            name: Path {
                                                root: [],
                                                name: Type {
                                                    name: Identifier {
                                                        name: "T",
                                                        location: Location(
                                                            20..21,
                                                        ),
                                                    },
                                                    bound_types: [],
                                                    location: Location(
                                                        20..21,
                                                    ),
                                                },
                                                location: Location(
                                                    20..21,
                                                ),
                                            },
                                        },
                                    ),
                                ],
                                location: Location(
                                    13..22,
                                ),
                            },
                        ],
                        name: Callable {
                            name: Identifier {
                                name: "call",
                                location: Location(
                                    24..28,
                                ),
                            },
                            bound_types: [],
                            location: Location(
                                24..28,
                            ),
                        },
                        location: Location(
                            24..28,
                        ),
                    },
                    arguments: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        29..30,
                                    ),
                                },
                            },
                        ),
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "b",
                                    location: Location(
                                        32..33,
                                    ),
                                },
                            },
                        ),
                    ],
                    location: Location(
                        24..34,
                    ),
                },
            ),
            location: Location(
                0..35,
            ),
        },
    ),
]
