compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@static_generic_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = Foo::call<T>(a, b);\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Call(
                Call {
                    callee: None,
                    name: Path {
                        root: [
                            Type {
                                name: Identifier {
                                    name: "Foo",
                                    location: Location(
                                        8..11,
                                    ),
                                },
                                bound_types: [],
                                location: Location(
                                    8..11,
                                ),
                            },
                        ],
                        name: Callable {
                            name: Identifier {
                                name: "call",
                                location: Location(
                                    13..17,
                                ),
                            },
                            bound_types: [
                                Named(
                                    NamedType {
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "T",
                                                    location: Location(
                                                        18..19,
                                                    ),
                                                },
                                                bound_types: [],
                                                location: Location(
                                                    18..19,
                                                ),
                                            },
                                            location: Location(
                                                18..19,
                                            ),
                                        },
                                    },
                                ),
                            ],
                            location: Location(
                                13..20,
                            ),
                        },
                        location: Location(
                            13..20,
                        ),
                    },
                    arguments: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        21..22,
                                    ),
                                },
                            },
                        ),
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "b",
                                    location: Location(
                                        24..25,
                                    ),
                                },
                            },
                        ),
                    ],
                    location: Location(
                        13..26,
                    ),
                },
            ),
            location: Location(
                0..27,
            ),
        },
    ),
]
