compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@static_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = Foo::call(a, b);\")"
---
SOURCE_FILE@0..24
  LET_STMT@0..24
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    STATIC_CALL_EXPR@7..23
      WHITESPACE@7..8 " "
      PATH@8..17
        PATH_TYPE@8..11
          NAME@8..11
            IDENT@8..11 "Foo"
        PATH_SEP@11..13 "::"
        PATH_CALLABLE@13..17
          NAME@13..17
            IDENT@13..17 "call"
      ARG_LIST@17..23
        LEFT_PAREN@17..18 "("
        VARIABLE_EXPR@18..19
          NAME@18..19
            IDENT@18..19 "a"
        COMMA@19..20 ","
        WHITESPACE@20..21 " "
        VARIABLE_EXPR@21..22
          NAME@21..22
            IDENT@21..22 "b"
        RIGHT_PAREN@22..23 ")"
    SEMICOLON@23..24 ";"
