compiler/lume_parser/src/snapshots/lume_parser__tests__cast_snapshots@invocation.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"a() as u64;\")"
---
SOURCE_FILE@0..11
  EXPR_STMT@0..11
    CAST_EXPR@0..10
      STATIC_CALL_EXPR@0..3
        PATH@0..1
          PATH_CALLABLE@0..1
            NAME@0..1
              IDENT@0..1 "a"
        ARG_LIST@1..3
          LEFT_PAREN@1..2 "("
          RIGHT_PAREN@2..3 ")"
      WHITESPACE@3..4 " "
      AS_KW@4..6 "as"
      WHITESPACE@6..7 " "
      NAMED_TYPE@7..10
        PATH@7..10
          PATH_NAMESPACE@7..10
            NAME@7..10
              IDENT@7..10 "u64"
    SEMICOLON@10..11 ";"
