compiler/lume_parser/src/snapshots/lume_parser__tests__cast_snapshots@literal_single.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 as u64;\")"
---
SOURCE_FILE@0..9
  EXPR_STMT@0..9
    CAST_EXPR@0..8
      LIT_EXPR@0..1
        INTEGER_LIT@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      AS_KW@2..4 "as"
      WHITESPACE@4..5 " "
      NAMED_TYPE@5..8
        PATH@5..8
          PATH_NAMESPACE@5..8
            NAME@5..8
              IDENT@5..8 "u64"
    SEMICOLON@8..9 ";"
