compiler/lume_parser/src/snapshots/lume_parser__tests__cast_snapshots@precedence_equal.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 as u64 == 0;\")"
---
SOURCE_FILE@0..14
  EXPR_STMT@0..14
    BIN_EXPR@0..13
      CAST_EXPR@0..9
        LIT_EXPR@0..1
          INTEGER_LIT@0..1
            INTEGER_LIT@0..1 "0"
        WHITESPACE@1..2 " "
        AS_KW@2..4 "as"
        WHITESPACE@4..5 " "
        NAMED_TYPE@5..9
          PATH@5..9
            PATH_NAMESPACE@5..9
              NAME@5..8
                IDENT@5..8 "u64"
              WHITESPACE@8..9 " "
      EQUAL@9..11 "=="
      WHITESPACE@11..12 " "
      LIT_EXPR@12..13
        INTEGER_LIT@12..13
          INTEGER_LIT@12..13 "0"
    SEMICOLON@13..14 ";"
