compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@else_if_statements.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement,\n\"if true { let a = 0; } else if false { let a = 0; }\")"
---
SOURCE_FILE@0..51
  EXPR_STMT@0..51
    IF_EXPR@0..51
      CONDITION@0..22
        IF_KW@0..2 "if"
        WHITESPACE@2..3 " "
        LIT_EXPR@3..7
          BOOLEAN_LIT@3..7
            BOOLEAN_LIT@3..7 "true"
        WHITESPACE@7..8 " "
        BLOCK@8..22
          LEFT_BRACE@8..9 "{"
          WHITESPACE@9..10 " "
          LET_STMT@10..20
            LET_KW@10..13 "let"
            WHITESPACE@13..14 " "
            NAME@14..15
              IDENT@14..15 "a"
            WHITESPACE@15..16 " "
            ASSIGN@16..17 "="
            WHITESPACE@17..18 " "
            LIT_EXPR@18..19
              INTEGER_LIT@18..19
                INTEGER_LIT@18..19 "0"
            SEMICOLON@19..20 ";"
          WHITESPACE@20..21 " "
          RIGHT_BRACE@21..22 "}"
      WHITESPACE@22..23 " "
      CONDITION@23..51
        ELSE_KW@23..27 "else"
        WHITESPACE@27..28 " "
        IF_KW@28..30 "if"
        WHITESPACE@30..31 " "
        LIT_EXPR@31..36
          BOOLEAN_LIT@31..36
            BOOLEAN_LIT@31..36 "false"
        WHITESPACE@36..37 " "
        BLOCK@37..51
          LEFT_BRACE@37..38 "{"
          WHITESPACE@38..39 " "
          LET_STMT@39..49
            LET_KW@39..42 "let"
            WHITESPACE@42..43 " "
            NAME@43..44
              IDENT@43..44 "a"
            WHITESPACE@44..45 " "
            ASSIGN@45..46 "="
            WHITESPACE@46..47 " "
            LIT_EXPR@47..48
              INTEGER_LIT@47..48
                INTEGER_LIT@47..48 "0"
            SEMICOLON@48..49 ";"
          WHITESPACE@49..50 " "
          RIGHT_BRACE@50..51 "}"
