compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@if_else_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if true { } else { }\")"
---
SOURCE_FILE@0..20
  EXPR_STMT@0..20
    IF_EXPR@0..20
      CONDITION@0..11
        IF_KW@0..2 "if"
        WHITESPACE@2..3 " "
        LIT_EXPR@3..7
          BOOLEAN_LIT@3..7
            BOOLEAN_LIT@3..7 "true"
        WHITESPACE@7..8 " "
        BLOCK@8..11
          LEFT_BRACE@8..9 "{"
          WHITESPACE@9..10 " "
          RIGHT_BRACE@10..11 "}"
      WHITESPACE@11..12 " "
      CONDITION@12..20
        ELSE_KW@12..16 "else"
        WHITESPACE@16..17 " "
        BLOCK@17..20
          LEFT_BRACE@17..18 "{"
          WHITESPACE@18..19 " "
          RIGHT_BRACE@19..20 "}"
